# qwertycoin-gui

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  COPYING  CryptoNoteWallet.cmake  LICENSE.txt  README.md  ReleaseNotes.txt  copyright
.github/workflows/: check.yml  release.yml
cmake/hunter/: HunterConfig.cmake
cmake/project/: CPackConfig.cmake  CompilerSettings.cmake  GlobalVariables.cmake
cryptonote/: Readme.md
libqrencode/: Makefile.in  aclocal.m4  config.h.in  configure
libqrencode/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
libqrencode/tests/: Makefile.in
src/: AliasProvider.cpp  AliasProvider.h  CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  CryptoNoteWalletConfig.h.in  CryptoNoteWrapper.cpp  CryptoNoteWrapper.h  CurrencyAdapter.cpp  CurrencyAdapter.h  DnsLookup.cpp  Languages.pro  NodeAdapter.cpp  NodeAdapter.h  OptimizationManager.cpp  PaymentServer.cpp  PaymentServer.h  Settings.cpp  Settings.h  TranslatorManager.cpp  Update.cpp  Update.h  WalletAdapter.cpp  WalletAdapter.h  Worker.cpp  cryptonotewallet.rc  default.qss  main.cpp  qwertycoinwallet.desktop  qwertycoinwallet.rc  qwertycoinwallet.sh  resources.qrc  version.h.in
src/gui/: AboutDialog.cpp  AccountFrame.cpp  AddressBookDialog.cpp  AddressBookDialog.h  AddressBookFrame.cpp  ChangeLanguageDialog.cpp  ChangeLanguageDialog.h  ConfirmSendDialog.cpp  ConfirmSendDialog.h  ConnectionSettings.cpp  ConnectionSettings.h  ExportTrackingKeyDialog.cpp  ExportTrackingKeyDialog.h  GlassFrame.cpp  GlassFrame.h  ImportKeyDialog.cpp  ImportKeyDialog.h  ImportTrackingKeyDialog.cpp  ImportTrackingKeyDialog.h  InfoDialog.cpp  InfoDialog.h  MainWindow.cpp  MainWindow.h  Message.cpp  Message.h  MessageAddressFrame.cpp  MessageAddressFrame.h  MessageDetailsDialog.cpp  MessageDetailsDialog.h  MessagesFrame.cpp  MessagesFrame.h  MessagesModel.cpp  MessagesModel.h  MiningFrame.cpp  MiningFrame.h  MnemonicSeedDialog.cpp  MnemonicSeedDialog.h  NewAddressDialog.cpp  NewAddressDialog.h  NewNodeDialog.cpp  (+36 more)
src/gui/ui/: aboutdialog.ui  accountframe.ui  changelanguagedialog.ui  confirmsenddialog.ui  connectionsettingsdialog.ui  getbalanceproofdialog.ui  mainwindow.ui  newnodedialog.ui  nowalletframe.ui  optimizationsettingsdialog.ui  privatekeysdialog.ui  receiveframe.ui  sendframe.ui  sendmessageframe.ui  transferframe.ui
src/images/: qwertycoin.icns  qwertycoinz.icns
src/languages/: ar.qm  ar.ts  be.qm  be.ts  de.qm  de.ts  en.ts  es.qm  es.ts  fa.qm  fa.ts  fr.qm  fr.ts  hi.qm  hi.ts  it.qm  it.ts  ja.qm  ja.ts  ko.qm  ko.ts  pl.qm  pl.ts  pt.qm  pt.ts  ru.qm  ru.ts  uk.qm  uk.ts  zh.qm  zh.ts
